Fix overflowing pre elements inside grid elements

--- a/src/sass/3-generic/generic.sass
+++ b/src/sass/3-generic/generic.sass
@@ -16,5 +16,7 @@ hr
   display: grid
   grid-template-columns: 1fr
   gap: 6rem
+  > *
+    min-width: 0
   +tablet
     grid-template-columns: 1fr 10rem
